--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -25,7 +25,7 @@
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
 
-= link_to 'Add new movie', new_movie_path
+= button_to 'Add new movie', new_movie_path, {:class => 'btn btn-primary', :method => 'get'}
 
 -# add to end of app/views/movies/index.html.haml:
 %h1 Search TMDb for a movie
